--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
         <div class="header-wrapper d-flex j-content-sb a-items-center">
             <div class="header-content-logo">
                 <a href="{{ site.baseurl }}/" class="logo">
-                    <img class="lazyload" data-src="/images/logo.svg" alt="" />
+                    <img class="lazyload" data-src="/images/logo1.svg" alt="" />
                 </a>
                 <div class="burger-buttons">
                     <img class="lazyload" id="hamburger_menu_open" data-src="/images/icons/hamburger-closed.svg" />
