--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -7,16 +7,43 @@
 
             <div class="modal-header pt-30">
 
-                <h2 class="fw-700 fs-32 fs-sm-24 ln-140 color-primary text-center mb-30">Subscribe to our mailing list</h2>
+                <h2 class="fw-700 fs-32 fs-sm-24 ln-140 color-primary text-center mb-30">Subscribe to our mailing list
+                </h2>
             </div>
 
             <div class="modal-body text-center">
-                <form class="d-flex d-column">
-                    <input class="fs-18 lh-180 mb-40 d-flex a-s-c" type="text" placeholder="Email Address"
-                        name="email" />
-                    <button class="mb-10 button button-secondary button-sm d-flex j-content-center a-s-c"
-                        type="submit">Subscribe</button>
+
+                <!-- Begin Mailchimp Signup Form-->
+                <form class="d-flex d-column validate"
+                    action="https://network.us1.list-manage.com/subscribe/post?u=abb06950e3a65452b931c8069&amp;id=2878daa66b"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" 
+                    target="_blank" novalidate>
+                        <div class="mc-field-group d-flex d-column mb-20 ">
+                            <input type="email" placeholder="Email Address" value="" name="EMAIL"
+                                class="required email fs-18 lh-180 mb-10 d-flex a-s-c" id="mce-EMAIL">
+
+                                <div id="mce-responses" class="clear d-flex d-column">
+                                        <div class="response" id="mce-error-response" style="display:none"></div>
+                                        <div class="response" id="mce-success-response" style="display:none"></div>
+                                    </div>
+                        </div>
+                        
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text"
+                                name="b_abb06950e3a65452b931c8069_2878daa66b" tabindex="-1" value=""></div>
+                        <div class="clear d-flex d-column">
+                            <button type="submit" name="subscribe" id="mc-embedded-subscribe"
+                                class="mb-10 button button-secondary button-sm d-flex j-content-center a-s-c">
+                                Subscribe
+                            </button>
+                        </div>
+                    <!-- </div> -->
                 </form>
+                <script type='text/javascript'
+                    src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                <script
+                    type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'MMERGE3'; ftypes[3] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+                <!--End mc_embed_signup-->
             </div>
         </div>
     </div>
