Add basic hero animation (first section)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -73,6 +73,7 @@
 <script src="/assets/js/lazysizes.min.js"></script>
 
 <script type="text/javascript" src="/assets/js/animations/tweenMax.js"></script>
+<script type="text/javascript" src="/assets/js/animations/modules/CustomEase.js"></script>
 <script type="text/javascript" src="/assets/js/animations/morphSvgPlugin.min.js"></script>
 <script type="text/javascript" src="/assets/js/animations/moveByPath.js"></script>
 
