Exclude animations from non-home pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,14 +71,15 @@
 <script src="https://unpkg.com/tooltip.js/dist/umd/tooltip.min.js"></script>
 <script src="/assets/js/rmodal.min.js"></script>
 <script src="/assets/js/lazysizes.min.js"></script>
-
+{% if page.layout == "homepage" %}
 <script type="text/javascript" src="/assets/js/animations/tweenMax.js"></script>
 <script type="text/javascript" src="/assets/js/animations/modules/CustomEase.js"></script>
 <script type="text/javascript" src="/assets/js/animations/morphSvgPlugin.min.js"></script>
 <script type="text/javascript" src="/assets/js/animations/moveByPath.js"></script>
+<script type="module" src="/assets/js/animations/main.js"></script>
 
 <script type="text/javascript" src="/assets/js/animations/rotateWheel.js"></script>
 <script type="text/javascript" src="/assets/js/animations/longPositions.js"></script>
 <script type="text/javascript" src="/assets/js/animations/history.js"></script>
-
+{% endif %}
 <script type="module" src="/assets/js/main.js"></script>
