Add animation for sections of insured, token, short positions

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -78,6 +78,9 @@
 
 <script type="text/javascript" src="/assets/js/animations/rotateWheel.js"></script>
 <script type="text/javascript" src="/assets/js/animations/longPositions.js"></script>
+<script type="text/javascript" src="/assets/js/animations/shortPositions.js"></script>
+<script type="text/javascript" src="/assets/js/animations/tap.js"></script>
+<script type="text/javascript" src="/assets/js/animations/insured.js"></script>
 <script type="text/javascript" src="/assets/js/animations/history.js"></script>
 
 <script type="text/javascript" src="/assets/js/main.js"></script>
