--- a/_sass/components/_pseudo.scss
+++ b/_sass/components/_pseudo.scss
@@ -6,6 +6,10 @@
     &.t-0{
         top: 0;
     }
+
+    &.t-60{
+        top: 60px;
+    }
     &.t-240{
         top: 240px;
     }
@@ -24,7 +28,7 @@
 }
 
 @media(min-width: 1441px){
-    .svg-insured{
+    /*.svg-insured{
         &:before{
             content: url(/images/icons/before-insured.svg);
             position: absolute;
@@ -38,7 +42,7 @@
             top: 0;    
             transform: rotateY(180deg);
         }
-    }
+    }*/
     .svg-position{
         &:before{
             content: url(/images/icons/before-long-positions.svg);
@@ -69,17 +73,17 @@
             transform: rotateY(180deg);
         }
     }
-    .opacity-trumpet{
+    /*.opacity-trumpet{
         &:before{
             content: url(/images/icons/before-opacity-trumpet.svg);
             position: absolute;
             left: calc((100% - 1440px) / 2 - 560px);
             bottom: -147px;
         }
-    }
+    }*/
     .rotate-line{
         &:before{
-            content: url(/images/icons/before-rotate-line.svg);
+            content: url(/images/icons/before-rotate-line2.svg);
             position: absolute;
             left: calc((100% - 1440px) / 2 - 560px);
             top: -47px;
@@ -91,7 +95,7 @@
             top: 126px;
         }
     }
-    .rotate-line-2{
+    /*.rotate-line-2{
         &:before{
             content: url(/images/icons/before-rotate-line-2.svg);
             position: absolute;
@@ -104,7 +108,7 @@
             right: calc((100% - 1440px) / 2 - 560px);
             top: 210px;
         }
-    }
+    }*/
     .before-line{
         &:before{
             content: url(/images/icons/before-line.svg);
