Remove capitalizing from menu items

--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -30,11 +30,10 @@
     .link {
         display: flex;
         font-family: $primary-font;
-        font-size: 12px;
-        font-weight: 700;
-        line-height: 1.25;
-        text-transform: uppercase;
-        letter-spacing: 0.05em;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 23px;
+        text-transform: none;
         text-decoration: none;
         color: $secondary-color;
         position: relative;
@@ -43,7 +42,7 @@
         }
         img {
             position: absolute;
-            bottom: 5px;
+            top: -6px;
             left: -16px;
         }
     }
