--- a/_sass/layout/_navigation.scss
+++ b/_sass/layout/_navigation.scss
@@ -98,9 +98,16 @@
 }
 
 
-@media (min-width: 768px) and (max-width: 1200px) {
+@media (min-width: 768px) and (max-width: 1023px) {
 
     .menu-list-item:not(:last-child) {
-        padding-right: 25px;
+        padding-right: 15px;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1140px) {
+
+    .menu-list-item:not(:last-child) {
+        padding-right: 35px;
     }
 }
