--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -66,6 +66,9 @@
 .color-white{
     color: #FFFFFF;
 }
+.color-black{
+    color: #283049;
+}
 @media(max-width: 1199px){
     .fs-xl-28{
         font-size: 28px;
