--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
             <div class="header-content-menu">
                 <ul class="menu-list d-flex">
                     <li class="menu-list-item">
-                        <a href="#" class="link">
+                        <a href="/#how-it-works" class="link">
                             <span class="text">How it works</span>
                         </a>
                     </li>
