--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -61,6 +61,7 @@ body.modal-open {
                 box-sizing: border-box;
                 border-radius: 4px;
                 max-height: 49px;
+                min-width: 340px;
                 &:focus{
                     background: #fff;
                     border: 2px solid #276BFB;
