--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,30 +4,30 @@
             <div class="network">
                 <ul>
                     <li>bzx protocol</li>
-                    <li><a href="/#how-it-works">how it works</a></li>
-                    <li><a href="https://docs.bzx.network/">documentation</a></li>
-                    <li><a href="/pdfs/bZx_lite_paper.pdf">litepaper</a></li>
-                    <li><a href="/blog">blog</a></li>
+                    <li><a href="/#how-it-works">How it works</a></li>
+                    <li><a href="https://docs.bzx.network/">Documentation</a></li>
+                    <li><a href="/pdfs/bZx_lite_paper.pdf">Litepaper</a></li>
+                    <li><a href="/blog">Blog</a></li>
                 </ul>
             </div>
             <div class="products">
                 <ul>
-                    <li>products</li>
+                    <li>Products</li>
 
-                    <li><a href="https://fulcrum.trade/">fulcrum</a></li>
-                    <li><a href="https://torque.loans/">torque</a></li>
-                    <li><a href="/itokens">itokens</a></li>
-                    <li><a href="https://portal.bzx.network/">portal</a></li>
+                    <li><a href="https://fulcrum.trade/">Fulcrum</a></li>
+                    <li><a href="https://torque.loans/">Torque</a></li>
+                    <li><a href="/itokens">iTokens</a></li>
+                    <li><a href="https://portal.bzx.network/">Portal</a></li>
                 </ul>
             </div>
             <div class="company">
                 <ul>
-                    <li>company</li>
-                    <li><a href="/#history">history</a></li>
-                    <li><a href="/#team">team</a></li>
-                    <li><a href="/press">press</a></li>
-                    <li><a href="/media-assets">media assets</a></li>
-                    <li><a href="#" class="contact-us-button">contact us</a></li>
+                    <li>Company</li>
+                    <li><a href="/#history">History</a></li>
+                    <li><a href="/#team">Team</a></li>
+                    <li><a href="/press">Press</a></li>
+                    <li><a href="/media-assets">Media assets</a></li>
+                    <li><a href="#" class="contact-us-button">Contact us</a></li>
                 </ul>
             </div>
         </div>
