--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -95,6 +95,14 @@ footer {
                     justify-content: center;
                     flex: 1;
                 }
+                ul {
+                    li {
+                        font-size: 16px;
+                        &:first-child {
+                            font-size: 18px;
+                        }
+                    }
+                }
             }
             .social-wrapper {
                 width: 100%;
