Responsive homepage sections for res between 580 and 767px

--- a/_sass/base/_flex.scss
+++ b/_sass/base/_flex.scss
@@ -45,7 +45,7 @@
         justify-content: center;
     }
 }
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (min-width: 580px) and (max-width: 767px) {
 
     .j-md-content-sb{
         justify-content: space-between;
@@ -54,6 +54,18 @@
         justify-content: space-around;
     }
     .j-md-content-center{
+        justify-content: center;
+    }
+}
+@media (min-width: 768px) and (max-width: 1023px) {
+
+    .j-lg-content-sb{
+        justify-content: space-between;
+    }
+    .j-lg-content-sa{
+        justify-content: space-around;
+    }
+    .j-lg-content-center{
         justify-content: center;
     }
 }
