--- a/_sass/components/_sections.scss
+++ b/_sass/components/_sections.scss
@@ -435,8 +435,8 @@ section.bg-wave {
 }
 
 .smoking-tube {
-    margin-top: -240px;
-
+    margin-top: -360px;
+    overflow: hidden;
     #safer-smoke {
         opacity: 0.2;
         position: absolute;
