Update media class from *-sm-* to *-xs-*

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class="container container-xl d-flex">
-        <div class="navigation d-flex j-content-sa fw-700 fs-12 lh-120 fs-sm-10 lh-sm-130">
+        <div class="navigation d-flex j-content-sa fw-700 fs-12 lh-120 fs-xs-10 lh-xs-130">
             <div class="network">
                 <ul>
                     <li>bzx protocol</li>
@@ -33,7 +33,7 @@
         </div>
         <div class="social-wrapper d-flex flex-d-c j-content-sb">
             {% include social-icons.html%}
-            <div class="disclaimer fs-12 lh-150 fs-sm-10 mb-20">
+            <div class="disclaimer fs-12 lh-150 fs-xs-10 mb-20">
                 © 2019 bZeroX, LLC
             </div>
         </div>
