--- a/_includes/social-icons.html
+++ b/_includes/social-icons.html
@@ -1,4 +1,4 @@
-<div class="social-icons mb-sm-20">
+<div class="social-icons mb-xs-20">
 
     <a href="{{ site.data.social-icons.github.url}}" class="{{site.data.social-icons.github.name}}">
         {% include {{ site.data.social-icons.github.svg }} %}
