--- a/_sass/base/_flex.scss
+++ b/_sass/base/_flex.scss
@@ -35,13 +35,13 @@
     flex-direction: row;
 }
 @media(max-width: 579px){
-    .flex-sm-d-r{
+    .flex-xs-d-r{
         flex-direction: row;
     }
-    .flex-sm-d-c{
+    .flex-xs-d-c{
         flex-direction: column;
     }
-    .j-sm-content-center{
+    .j-xs-content-center{
         justify-content: center;
     }
 }
