--- a/_sass/base/_spacing.scss
+++ b/_sass/base/_spacing.scss
@@ -184,77 +184,77 @@
     padding-bottom: 70px;
 }
 @media(max-width: 579px){
-    .mt-sm-r-5{
+    .mt-xs-r-5{
         margin-top: -5px;
     }
-    .mt-sm-20{
+    .mt-xs-20{
         margin-top: 20px;
     }
-    .mt-sm-30{
+    .mt-xs-30{
         margin-top: 30px;
     }
-    .mt-sm-40{
+    .mt-xs-40{
         margin-top: 40px;
     }
-    .mt-sm-60{
+    .mt-xs-60{
         margin-top: 60px;
     }
-    .mb-sm-0{
+    .mb-xs-0{
         margin-bottom: 0;
     }
-    .mb-sm-10{
+    .mb-xs-10{
         margin-bottom: 10px;
     }
-    .mb-sm-15{
+    .mb-xs-15{
         margin-bottom: 15px;
     }
-    .mb-sm-20{
+    .mb-xs-20{
         margin-bottom: 20px;
     }
-    .mb-sm-30{
+    .mb-xs-30{
         margin-bottom: 30px;
     }
-    .mb-sm-40{
+    .mb-xs-40{
         margin-bottom: 40px;
     }
-    .mb-sm-50{
+    .mb-xs-50{
         margin-bottom: 50px;
     }
-    .pt-sm-0{
+    .pt-xs-0{
         padding-top: 0;
     }
-    .pt-sm-30{
+    .pt-xs-30{
         padding-top: 30px;
     }
-    .pt-sm-35{
+    .pt-xs-35{
         padding-top: 35px;
     }
-    .pt-sm-45{
+    .pt-xs-45{
         padding-top: 45px;
     }
-    .pt-sm-90{
+    .pt-xs-90{
         padding-top: 90px;
     }
-    .pb-sm-0{
+    .pb-xs-0{
         padding-bottom: 0;
     }
-    .pb-sm-20{
+    .pb-xs-20{
         padding-bottom: 20px;
     }
-    .pb-sm-30{
+    .pb-xs-30{
         padding-bottom: 30px;
     }
-    .pb-sm-35{
+    .pb-xs-35{
         padding-bottom: 35px;
     }
-    .pb-sm-55{
+    .pb-xs-55{
         padding-bottom: 55px;
     }
-    .px-sm-15{
+    .px-xs-15{
         padding-left: 15px;
         padding-right: 15px;
     }
-    .px-sm-40{
+    .px-xs-40{
         padding-left: 40px;
         padding-right: 40px;
     }
