--- a/_sass/components/_borders.scss
+++ b/_sass/components/_borders.scss
@@ -11,7 +11,7 @@
     border-top: 20px solid;
 }
 @media(max-width: 579px){
-    .bt-sm-14{
+    .bt-xs-14{
         border-top: 14px solid;
     }
 }
