--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -7,7 +7,7 @@
 
             <div class="modal-header pt-30">
 
-                <h2 class="fw-700 fs-32 fs-sm-24 ln-140 color-primary text-center mb-30">Subscribe to our mailing list
+                <h2 class="fw-700 fs-32 fs-xs-24 ln-140 color-primary text-center mb-30">Subscribe to our mailing list
                 </h2>
             </div>
 
