--- a/_includes/subscription.html
+++ b/_includes/subscription.html
@@ -1,7 +1,7 @@
 <section class="subscription">
     <div class="container container-xl">
         <div class="item-subscription">
-            <h2 class="fs-32 fs-xl-28 fs-sm-24 lh-140 fw-700 color-primary title-grid">{{ include.content }}</h2>
+            <h2 class="fs-32 fs-xl-28 fs-xs-24 lh-140 fw-700 color-primary title-grid">{{ include.content }}</h2>
             <button class="button button-secondary button-md d-flex j-content-center a-items-center button-grid {{include.buttonClass}}">
                 {{include.buttonText}}
             </button>
