--- a/_sass/base/_container.scss
+++ b/_sass/base/_container.scss
@@ -10,7 +10,7 @@
 .container-md {
     max-width: 730px;
 }
-.container-sm {
+.container-xs {
     max-width: 540px;
 }
 
@@ -18,7 +18,7 @@
     .container-xl, 
     .container-lg, 
     .container-md,
-    .container-sm {
+    .container-xs {
         max-width: 100%;
         padding: 0 15px;
     }
