--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -80,37 +80,37 @@
     }
 }
 @media(max-width: 579px){
-    .fs-sm-10{
+    .fs-xs-10{
         font-size: 10px;
     }
-    .fs-sm-11{
+    .fs-xs-11{
         font-size: 11px;
     }
-    .fs-sm-12{
+    .fs-xs-12{
         font-size: 12px;
     }
-    .fs-sm-13{
+    .fs-xs-13{
         font-size: 13px;
     }
-    .fs-sm-18{
+    .fs-xs-18{
         font-size: 18px;
     }
-    .fs-sm-20{
+    .fs-xs-20{
         font-size: 20px;
     }
-    .fs-sm-24{
+    .fs-xs-24{
         font-size: 24px;
     }
-    .fs-sm-32{
+    .fs-xs-32{
         font-size: 32px;
     }
-    .lh-sm-120{
+    .lh-xs-120{
         line-height: 1.2;
     }
-    .lh-sm-130{
+    .lh-xs-130{
         line-height: 1.3;
     }
-    .lh-sm-150{
+    .lh-xs-150{
         line-height: 1.5;
     }
 }
