--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -81,7 +81,7 @@ a {
   }
 }
 @media (max-width: 1439px) {
-  .mw-md-100{
+  .mw-md-100 {
     max-width: 100%;
   }
 }
@@ -96,34 +96,28 @@ a {
   }
 }
 
-.visible-lg{
-    display: none;
+.visible-lg {
+  display: none;
 }
-@media(min-width: 1024px){
-    .visible-lg{
-        display: block;
-    }
+@media (min-width: 1024px) {
+  .visible-lg {
+    display: block;
+  }
 }
 
-@media(max-width: 579px){
-    p{
-        font-size: 12px;
-    }
-    .hidden-sm{
-        display: none;
-    }
-    .mw-sm-px-400{
-        max-width: 400px;
-    }
-    .mw-sm-px-260{
-        max-width: 260px;
-    }
-    .mw-sm-px-100{
-        max-width: 100px;
-    }
-    .h-sm-auto{
-        height: auto;
-    }
+@media (max-width: 579px) {
+  p {
+    font-size: 12px;
+  }
+  .hidden-sm {
+    display: none;
+  }
+  .mw-sm-px-100 {
+    max-width: 100px;
+  }
+  .h-sm-auto {
+    height: auto;
+  }
 }
 
 .basket-right {
@@ -139,9 +133,30 @@ a {
     display: none;
   }
 }
-#coin_1, #coin_2, #cart2-with-coin{
+#coin_1,
+#coin_2,
+#cart2-with-coin {
   opacity: 0;
 }
-#in_cart1_with_coin, #in_cart2_with_coin, #in_cart3_with_coin, #in_cart4_with_coin{
+#in_cart1_with_coin,
+#in_cart2_with_coin,
+#in_cart3_with_coin,
+#in_cart4_with_coin {
   opacity: 0;
+}
+.before-coin {
+  @media (max-width: 991px) {
+    display: none;
+  }
+}
+.before-coin-mobile {
+  @media (min-width: 992px) {
+    display: none;
+  }
+}
+.container-before-coin {
+  width: 400px;
+  @media (max-width: 991px) {
+    width: 260px;
+  }
 }
