--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -114,3 +114,39 @@
         line-height: 1.5;
     }
 }
+
+@media(min-width: 580px) and (max-width: 767px){
+    .fs-sm-10{
+        font-size: 10px;
+    }
+    .fs-sm-11{
+        font-size: 11px;
+    }
+    .fs-sm-12{
+        font-size: 12px;
+    }
+    .fs-sm-13{
+        font-size: 13px;
+    }
+    .fs-sm-18{
+        font-size: 18px;
+    }
+    .fs-sm-20{
+        font-size: 20px;
+    }
+    .fs-sm-24{
+        font-size: 24px;
+    }
+    .fs-sm-32{
+        font-size: 32px;
+    }
+    .lh-sm-120{
+        line-height: 1.2;
+    }
+    .lh-sm-130{
+        line-height: 1.3;
+    }
+    .lh-sm-150{
+        line-height: 1.5;
+    }
+}
