--- a/_sass/base/_spacing.scss
+++ b/_sass/base/_spacing.scss
@@ -261,7 +261,7 @@
 }
 
 
-@media(min-width: 580px) and (max-width: 767px){
+@media (max-width: 767px){
     .mt-sm-r-5{
         margin-top: -5px;
     }
@@ -338,7 +338,7 @@
     }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
     .mt-md-r-5{
         margin-top: -5px;
     }
@@ -414,7 +414,7 @@
         padding-right: 40px;
     }
 }
-@media (min-width: 1024px) and (max-width: 1140px) {
+@media (max-width: 1140px) {
 
     .mt-lg-r-90{
         margin-top: -90px;
