--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -115,7 +115,7 @@
     }
 }
 
-@media(min-width: 580px) and (max-width: 767px){
+@media (max-width: 767px){
     .fs-sm-10{
         font-size: 10px;
     }
