--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -42,7 +42,7 @@
 <script>
 
     window.intercomSettings = {
-        app_id: "qijyre31",
+        app_id: "dfk4n5ut",
         background_color: "#000085",
         action_color: "#000085"
     };
