hotifx colors intercom

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,8 +43,8 @@
 
     window.intercomSettings = {
         app_id: "dfk4n5ut",
-        background_color: "#000085",
-        action_color: "#000085"
+        background_color: "#00ACC1",
+        action_color: "#0071B2"
     };
     function messenger(display) {
         //Insert sign out code here
