Add intersection observer polyfill

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -72,6 +72,7 @@
 <script src="/assets/js/rmodal.min.js"></script>
 <script src="/assets/js/lazysizes.min.js"></script>
 {% if page.layout == "homepage" %}
+<script type="text/javascript" src="/assets/js/polyfill-intersection-observer.js"></script>
 <script type="text/javascript" src="/assets/js/animations/tweenMax.js"></script>
 <script type="text/javascript" src="/assets/js/animations/modules/CustomEase.js"></script>
 <script type="text/javascript" src="/assets/js/animations/morphSvgPlugin.min.js"></script>
