Add base media assets page

--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -84,6 +84,10 @@
         max-width: 220px;
         min-width: 220px;
     }
+    &.button-xxl {
+        max-width: 275px;
+        min-width: 275px;
+    }
     &.button-lg {
         max-width: 190px;
         min-width: 190px;
