--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@
 @import "_blog-index";
 @import "_blog-post";
 @import "_blog-post-content";
+@import "_media-assets";
 @import "_footer";
 
 @import "base/_flex";
