--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -7,7 +7,8 @@
     font-size: 12px;
     line-height: 1.25;
     text-transform: uppercase;
-    padding: 9px 0;
+    display: inline-block;
+    padding: 9px 20px;
     letter-spacing: 0.05em;
     transform-style: preserve-3d;
     // transition: all 0.3s ease;
