--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -8,9 +8,10 @@
     line-height: 1.25;
     text-transform: uppercase;
     display: inline-block;
-    padding: 9px 20px;
+    padding: 9px 16px;
     letter-spacing: 0.05em;
     transform-style: preserve-3d;
+    text-align: center;
     // transition: all 0.3s ease;
     &:hover {
         cursor: pointer;
