--- a/_sass/_media-assets.scss
+++ b/_sass/_media-assets.scss
@@ -4,7 +4,19 @@
         grid-template-columns: repeat(4, 1fr);
         grid-template-areas: "logo logo-invert symbol symbol";
         column-gap: 30px;
-
+        @media screen and (max-width: 767px) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(2, 1fr);
+            grid-template-areas:
+                "logo logo-invert"
+                "symbol symbol";
+            grid-gap: 10px;
+        }
+        img {
+            margin: 0;
+            display: flex;
+            justify-self: center;
+        }
         .logo {
             grid-area: logo;
         }
@@ -23,6 +35,13 @@
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 30px;
+    @media screen and (max-width: 767px) {
+        max-width: 580px;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-gap: 30px;
+    }
+
     .color-circle {
         position: relative;
         border-radius: 50%;
@@ -34,7 +53,6 @@
         padding-top: 100%;
         span {
             color: #fff;
-            font-size: 18px;
             line-height: 180%;
             position: absolute;
             top: 50%;
@@ -67,8 +85,18 @@
         display: grid;
         grid-template-columns: repeat(9, 1fr);
         column-gap: 25px;
+        @media screen and (max-width: 767px) {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            grid-gap: 30px;
+        }
     }
 
     &-wrapper {
+        svg {
+            width: 100%;
+            max-width: 100px;
+            height: auto;
+        }
     }
 }
