--- a/_sass/_media-assets.scss
+++ b/_sass/_media-assets.scss
@@ -1,4 +1,7 @@
 .media-assets {
+    .button{
+        padding: 14px 25px;
+    }
     .grid {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
