Replace #000085 with color variable

--- a/_sass/_blog-post-content.scss
+++ b/_sass/_blog-post-content.scss
@@ -135,7 +135,7 @@
         font-weight: normal;
         font-size: 18px;
         line-height: 180%;
-        color: #000085;
+        color: $primary-color;
         padding-left: 30px;
         @media screen and (max-width: 580px) {
             font-size: 13px;
@@ -158,7 +158,7 @@
         font-weight: normal;
         font-size: 18px;
         line-height: 180%;
-        color: #000085;
+        color: $primary-color;
         padding-left: 30px;
         @media screen and (max-width: 580px) {
             font-size: 13px;
