--- a/_sass/_media-assets.scss
+++ b/_sass/_media-assets.scss
@@ -63,7 +63,7 @@
             transform: translate(-50%, -50%);
         }
         &.c000085 {
-            background-color: #000085;
+            background-color: $primary-color;
         }
         &.c003CDA {
             background-color: #003cda;
