--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -42,7 +42,7 @@ footer {
                 a {
                     color: #003cda;
                     &:hover {
-                        color: #000085;
+                        color: $primary-color;
                     }
                 }
             }
