--- a/_sass/components/_borders.scss
+++ b/_sass/components/_borders.scss
@@ -16,7 +16,7 @@
     }
 }
 .bt-primary{
-    border-color: $primary-border;
+    border-color: $primary-color;
 }
 .bt-secondary{
     border-color: $secondary-border;
