--- a/_sass/components/_buttons.scss
+++ b/_sass/components/_buttons.scss
@@ -28,8 +28,8 @@
                 position: absolute;
                 width: 100%;
                 height: 20px;
-                background-color: #000085;
-                border: 1px solid #000085;
+                background-color: $primary-color;
+                border: 1px solid $primary-color;
                 border-radius: 4px;
                 transform: translateZ(-1px);
                 top: -3.5px;
@@ -61,8 +61,8 @@
                 position: absolute;
                 width: 100%;
                 height: 20px;
-                background-color: #000085;
-                border: 1px solid #000085;
+                background-color: $primary-color;
+                border: 1px solid $primary-color;
                 border-radius: 4px;
                 transform: translateZ(-1px);
                 top: -3.5px;
@@ -74,7 +74,7 @@
             position: absolute;
             width: 100%;
             height: 20px;
-            background-color: #000085;
+            background-color: $primary-color;
             border: 1px solid $primary-color;
             border-radius: 4px;
             transform: translateZ(-1px);
