--- a/_sass/_media-assets.scss
+++ b/_sass/_media-assets.scss
@@ -69,7 +69,7 @@
             background-color: #003cda;
         }
         &.c276BFB {
-            background-color: #276bfb;
+            background-color: $secondary-color-light;
         }
         &.c00C0AB {
             background-color: #00c0ab;
