--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,7 +11,7 @@ body {
   background-color: $primary-color;
 }
 .bg-secondary {
-  background-color: $secondary-bg;
+  background-color: $secondary-color-light;
 }
 .bg-tertiary {
   background-color: $tertiary-bg;
