--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -2,7 +2,7 @@ $primary-color: #000085;
 $secondary-color: #003cda;
 $tertiary-color: #33dfcc;
 
-$secondary-bg: #276bfb;
+$secondary-color-light: #276bfb;
 $tertiary-bg: #00c0ab;
 
 $secondary-border: #003cda;
