--- a/_sass/components/_modal.scss
+++ b/_sass/components/_modal.scss
@@ -64,7 +64,7 @@ body.modal-open {
                 min-width: 340px;
                 &:focus{
                     background: #fff;
-                    border: 2px solid #276BFB;
+                    border: 2px solid $secondary-color-light;
                     border-radius: 4px;
                     outline: none;
                     color: $primary-color;
